# bioinformatics-toolkit

./: LICENSE  README.md  bioinformatics-toolkit.cabal  stack.yaml
Bio/: Motif.hs  Seq.hs
Bio/ChIPSeq/: ChIP.hs  exp.hs  fragment_length.hs
Bio/Motif/: Alignment.hs
Bio/Util/: Bed.hs  Overlap.hs  Transform.hs  Utils.hs
Bio/Utils/: Bed.hs  Overlap.hs  Utils.hs
app/: mergeMotifs.hs  viewSeq.hs
apps/: motifScan.hs
benchmarks/: bench.hs
bioinformatics-toolkit/: LICENSE  README.md  bioinformatics-toolkit.cabal  cabal.project
bioinformatics-toolkit-apps/: bioinformatics-toolkit-apps.cabal
bioinformatics-toolkit-apps/app/: MergeMotifs.hs  MkIndex.hs  MotifScan.hs  MotifScore.hs  motifScore.hs  motifscan.hs
bioinformatics-toolkit/benchmarks/: bench.hs
bioinformatics-toolkit/docs/: main.tex
bioinformatics-toolkit/src/Bio/: ChIPSeq.hs  GO.hs  HiC.hs  Motif.hs  Seq.hs
bioinformatics-toolkit/src/Bio/ChIPSeq/: FragLen.hs
bioinformatics-toolkit/src/Bio/Data/: Bam.hs  Bed.hs  Fasta.hs  Fastq.hs  Types.hs
bioinformatics-toolkit/src/Bio/Data/Bed/: Types.hs  Utils.hs
bioinformatics-toolkit/src/Bio/GO/: GREAT.hs  Parser.hs
bioinformatics-toolkit/src/Bio/HiC/Visualize/: Internal.hs
bioinformatics-toolkit/src/Bio/Motif/: Merge.hs  Search.hs
bioinformatics-toolkit/src/Bio/RealWorld/: BioGRID.hs  ENCODE.hs  Ensembl.hs  GDC.hs  GENCODE.hs  Reactome.hs  UCSC.hs  Uniprot.hs
bioinformatics-toolkit/src/Bio/Seq/: IO.hs
bioinformatics-toolkit/src/Bio/Utils/: BitVector.hs  Functions.hs  Overlap.hs  Types.hs
bioinformatics-toolkit/tests/: test.hs
bioinformatics-toolkit/tests/Tests/: Bam.hs  Bed.hs  ChIPSeq.hs  Fastq.hs  GREAT.hs  Motif.hs  Seq.hs  Tools.hs
bioinformatics-toolkit/tests/data/: example-test.sam  example.bam  example.bam.bai  motifs.meme  pairedend.bedpe  peaks.bed  peaks.sorted.bed  test.fastq  test_wrap.fastq  x.sam
bnfo-utils/: Bed.hs  Overlap  Overlap.hs  Utils.hs
chipseq/: ChIP.hs  exp2.hs  fragment.hs  fragment2.hs  fragment_length.hs  vector.hs
data/: 1  1.hs  motifs.fasta
exe/: mergeMotifs.hs  mkindex.hs  viewSeq.hs
src/Bio/: ChIPSeq.hs  GO.hs  HiC.hs  Motif.hs  Seq.hs
src/Bio/ChIPSeq/: ChIP.hs  FragLen.hs  Spline.hs  exp2.hs  test.hs
src/Bio/Data/: Bam.hs  Bed.hs  BigWig.hs  ENCODE.hs  Fasta.hs
src/Bio/Data/ENCODE/: Types.hs
src/Bio/GO/: GREAT.hs  Parser.hs
src/Bio/HiC/: Visualize.hs
src/Bio/Motif/: Alignment.hs  Merge.hs  Search.hs
src/Bio/RealWorld/: BioGRID.hs  ENCODE.hs  Ensembl.hs  GENCODE.hs  ID.hs  UCSC.hs
src/Bio/Seq/: IO.hs  Query.hs
src/Bio/Utils/: Bed.hs  Fasta.hs  Functions.hs  Misc.hs  Overlap.hs  Transform.hs  Types.hs
tests/: f1.bed  f2.bed  fragment.txt  nucl.txt  test.hs
tests/Tests/: .Motif.hs.swp  Bam.hs  Bed.hs  ChIPSeq.hs  GREAT.hs  Motif.hs  Tools.hs
tests/data/: example.bed  example_intersect_peaks.bed  motif.meme  pairedend.bam  tmp.bed
