name:                bioinformatics-toolkit-apps
version:             0.1.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017 Kai Zhang
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      app
  build-depends:       base
  exposed-modules:     Paths_bioinformatics_toolkit_apps
  default-language:    Haskell2010

executable scan_motif
  hs-source-dirs:      app
  main-is:             MotifScan.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
                     , conduit-combinators
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

executable motif_score
  hs-source-dirs:      app
  main-is:             MotifScore.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
                     , conduit-combinators
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

executable mkindex
  hs-source-dirs:      app
  main-is:             MkIndex.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
  default-language:    Haskell2010

executable merge_motifs
  hs-source-dirs:      app
  main-is:             MergeMotifs.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
                     , bytestring
                     , conduit-combinators
                     , clustering
                     , double-conversion
                     , split
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kaizhang/bioinformatics-toolkit.git
