name:                bioinformatics-toolkit-apps
version:             0.1.0
-- synopsis:
-- description:
-- homepage:
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          kai@kzhang.org
copyright:           (c) 2017-2018 Kai Zhang
category:            Bioinformatics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable scan_motif
  hs-source-dirs:      app
  main-is:             MotifScan.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
                     , conduit >=1.3.0
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

executable motif_score
  hs-source-dirs:      app
  main-is:             MotifScore.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  other-modules:     Paths_bioinformatics_toolkit_apps
  build-depends:       base
                     , bioinformatics-toolkit
                     , conduit >=1.3.0
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

executable mkindex
  hs-source-dirs:      app
  main-is:             MkIndex.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
  default-language:    Haskell2010

executable merge_motifs
  hs-source-dirs:      app
  main-is:             MergeMotifs.hs
  -- ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , bioinformatics-toolkit
                     , bytestring
                     , conduit >=1.3.0
                     , clustering
                     , double-conversion
                     , split
                     , data-default
                     , optparse-applicative
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kaizhang/bioinformatics-toolkit.git
